# sixtyfive02

./: .gdbinit  .gitignore  CMakeLists.txt  README.md
gdb/: cpu_pretty_printer.py
src/: main.c
src/cpu/: cpu.c  cpu.h  flags.c  flags.h  types.c  types.h
src/inst/: arith.c  arith.h  flags.c  flags.h  instruction_table.c  instruction_table.h  trans.c  trans.h
src/mem/: mem.c  mem.h
test/: test.c  test.h
test/cpu/: cpu_test.cpp
test/inst/: arith_test.c  arith_test.h  inst_test.cpp  test.h
test/mem/: mem_test.c  mem_test.cpp  mem_test.h
